# OpenGL_GLUT_Template

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindGLUT.cmake
src/: main.cpp
